@@ -15,8 +15,6 @@ Awaiting feedback, updates or removal:
 
 182 -  Make CURLINFO_LASTSOCKET accessible during perform
 
-187 -  Failing SFTP range tests cases 634 through 637
-
 Patches pending commit:
 
 183 - "libcurl issue with IPv6 and c-ares"
