@@ -1,9 +1,5 @@
-# $Id: DISABLED,v 1.35 2008-10-09 05:16:06 danf Exp $
+# $Id: DISABLED,v 1.36 2008-10-21 07:10:25 danf Exp $
 # This file can be used to specify test cases that should not run when all
 # test cases are run by runtests.pl. Just add the plain test case numbers, one
 # per line.
 # Lines starting with '#' letters are treated as comments.
-634
-635
-636
-637
